<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/profileIV"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleX=".8"
            android:scaleY=".8"
            android:src="@drawable/ic_user"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <EditText
            android:id="@+id/nameET"
            style="@style/AppTextAppearance.EditTextRounded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginDoubleDouble"
            android:background="@android:color/transparent"
            android:hint="@string/insert_name"
            android:padding="@dimen/marginDouble"
            app:layout_constraintTop_toBottomOf="@+id/profileIV" />

        <EditText
            android:id="@+id/dateET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTextAppearance.EditTextRounded"
            android:layout_margin="@dimen/marginDoubleDouble"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/date_selector"
            android:inputType="date"
            android:maxLines="1"
            android:padding="@dimen/marginDouble"
            app:layout_constraintTop_toBottomOf="@id/nameET" />

        <Button
            android:id="@+id/saveB"
            style="@style/AppTextAppearance.ButtonSolid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginDoubleDouble"
            android:layout_marginTop="20dp"
            android:text="@string/save_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateET" />


        <Button
            android:id="@+id/updateB"
            style="@style/AppTextAppearance.ButtonSolid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_margin="@dimen/marginDoubleDouble"
            android:layout_marginTop="20dp"
            android:text="@string/update_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateET" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>