<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.MainFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/main">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_logo" />

        </androidx.appcompat.widget.Toolbar>


        <EditText
            android:id="@+id/edtFilter"
            style="@style/AppTextAppearance.EditTextRounded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="@dimen/marginDouble"
            android:hint="@string/userFilterHint"
            android:inputType="text"
            android:paddingStart="@dimen/marginDouble"
            android:paddingTop="@dimen/margin"
            android:paddingEnd="@dimen/marginDouble"
            android:paddingBottom="@dimen/margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />


        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/marginDouble"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtFilter">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvResponses"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clEmpty"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/marginDouble"
            android:paddingStart="@dimen/margin"
            android:paddingEnd="@dimen/margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtFilter">

            <TextView
                android:id="@+id/textView2"
                style="@style/AppTextAppearance.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin"
                android:gravity="center"
                android:text="@string/noUserDescription"
                app:layout_constraintBottom_toTopOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView3"
                style="@style/AppTextAppearance.Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/noUserDescriptionAdvanced"
                app:layout_constraintBottom_toTopOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="200dp"
                android:layout_height="160dp"
                android:src="@drawable/ic_user"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/addNewUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_circle"
            android:layout_margin="@dimen/margin"
            app:layout_constraintBottom_toBottomOf="@+id/swipeRefreshLayout"
            app:layout_constraintEnd_toEndOf="@+id/swipeRefreshLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
